<resources>
    <string name="app_name">GitTalk</string>
    <string name="halo">Halo</string>
    <string name="gituser">GitUser</string>
    <string name="change_language">Change Language</string>
    <string name="search">Search</string>
    <string name="search_hint">Insert Username</string>
    <string name="users_name">Username</string>
    <string name="id_user">User ID</string>
    <string name="repo_url">Repository URL</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="fullname">Real Name</string>
    <string name="repository">Repository</string>
    <string name="number">RepoNumber</string>
    <string name="followers">Followers</string>
    <string name="folwesnumber">FolwesNum</string>
    <string name="following">Following</string>
    <string name="folwingnumber">FolwingNum</string>
    <string name="tab_text_follower">Followers</string>
    <string name="tab_text_following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="key_remainder">Key Remainder</string>
    <string name="text_remainder">Find your developer now!</string>

</resources>