<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/search"
            android:title="@string/search"
            android:icon = "@drawable/ic_baseline_search_24"
            app:showAsAction="collapseActionView|always"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />
        <item
            android:id="@+id/but_fav"
            android:title="@string/favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            app:showAsAction="always"/>
        <item android:id="@+id/menu2"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/change_language" />
        <item android:id="@+id/menu_alarm"
            android:title="@string/set_remainder"/>
    </group>
</menu>